updates
change thread creating ways, update key refilling count